--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -140,20 +140,27 @@
     },
     {
       "id": "7",
-      "name": "LESA",
+      "name": "WeatherFlow",
       "tech": "REACT",
-      "link": "https://lesa-prac-u7mu.vercel.app/",
+      "link": "https://weather-app-red-phi-86.vercel.app/",
       "image": "imgLesa"
     },
     {
       "id": "8",
+      "name": "LESA",
+      "tech": "REACT",
+      "link": "https://lesa-prac-u7mu.vercel.app/",
+      "image": "imgWeather"
+    },
+    {
+      "id": "9",
       "name": "OSP",
       "tech": "REACT",
       "link": "https://osptest.vercel.app/",
       "image": "imgOSP"
     },
     {
-      "id": "9",
+      "id": "10",
       "name": "Todo",
       "tech": "HTML - CSS - JS",
       "link": "https://todo-list-hartoy.vercel.app/",
